Playing with history tracking

--- a/ServicesGeneralEnglish.html
+++ b/ServicesGeneralEnglish.html
@@ -1,4 +1,4 @@
-
+ן»¿
 <script src="config/global.js" language="Javascript"></script>
 <link type=text/css rel=StyleSheet href=menuENG.css>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1255">
@@ -6,7 +6,7 @@
 <meta name="Description" content="Sysmop Technologies is a research and development company. Focus on Hardware, Embedded Systems, Mechanical and Software engineering projects. Projects including Medical, Automotive, Industrial Automation, Consumer electronics, Marine, Security and Military. ">
 <meta name="keywords" content="0105-4524, Sysmop Technologies, research, development, Hardware, Embedded Systems, Mechanical, Software engineering projects, Medical, Automotive, Industrial Automation, Consumer electronics, Marine, Security, Military,
 
- סיסמופ טכנולוגיות, פיתוח, תכנון לפרוייקטים, ערכות משובצות, חומרה, מכניקה, תוכנה, מיכשור רפואי, רכב, מיכשור תעשייתי, מוצרי צריכה, מיכשור ימי, אבטחה, מערכות צבאיות., Simply-Smart.com, בניית אתרים, סימפלי-סמארט, csme2, csme">
+ ׳¡׳™׳¡׳׳•׳₪ ׳˜׳›׳ ׳•׳׳•׳’׳™׳•׳×, ׳₪׳™׳×׳•׳—, ׳×׳›׳ ׳•׳ ׳׳₪׳¨׳•׳™׳™׳§׳˜׳™׳, ׳¢׳¨׳›׳•׳× ׳׳©׳•׳‘׳¦׳•׳×, ׳—׳•׳׳¨׳”, ׳׳›׳ ׳™׳§׳”, ׳×׳•׳›׳ ׳”, ׳׳™׳›׳©׳•׳¨ ׳¨׳₪׳•׳׳™, ׳¨׳›׳‘, ׳׳™׳›׳©׳•׳¨ ׳×׳¢׳©׳™׳™׳×׳™, ׳׳•׳¦׳¨׳™ ׳¦׳¨׳™׳›׳”, ׳׳™׳›׳©׳•׳¨ ׳™׳׳™, ׳׳‘׳˜׳—׳”, ׳׳¢׳¨׳›׳•׳× ׳¦׳‘׳׳™׳•׳×., Simply-Smart.com, ׳‘׳ ׳™׳™׳× ׳׳×׳¨׳™׳, ׳¡׳™׳׳₪׳׳™-׳¡׳׳׳¨׳˜, csme2, csme">
 <style>
 /* -------------------------------------------------------------- [ Genral ] ------------------------------------------------------ */
 
@@ -113,7 +113,7 @@ body,table,td,p,div,span,input,select,option,button {
 
 <DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;System, Hardware, Software and Mechanical Design </FONT></DIV>
 
-<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Implementation –&nbsp;</FONT></DIV>
+<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Implementation ג€“&nbsp;</FONT></DIV>
 
 <UL>
 
@@ -197,7 +197,7 @@ body,table,td,p,div,span,input,select,option,button {
 
 <DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;System, Hardware, Software and Mechanical Design </FONT></DIV>
 
-<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Implementation –&nbsp;</FONT></DIV>
+<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Implementation ג€“&nbsp;</FONT></DIV>
 
 <UL>
 
@@ -242,11 +242,11 @@ body,table,td,p,div,span,input,select,option,button {
 					<tr>
 						<td width="209">
 							<div align="right">
-								<a href="http://www.simply-smart.com/" target="_blank" title="Simply-Smart | בניית אתרים | קידום אתרים"><img src="images/logoB1.gif" alt="Simply-Smart | בניית אתרים | קידום אתרים" border="0"/></a>
+								<a href="http://www.simply-smart.com/" target="_blank" title="Simply-Smart | ׳‘׳ ׳™׳™׳× ׳׳×׳¨׳™׳ | ׳§׳™׳“׳•׳ ׳׳×׳¨׳™׳"><img src="images/logoB1.gif" alt="Simply-Smart | ׳‘׳ ׳™׳™׳× ׳׳×׳¨׳™׳ | ׳§׳™׳“׳•׳ ׳׳×׳¨׳™׳" border="0"/></a>
 							</div>
 						</td>
 						<td align=center>
-							<FONT size=1>Sysmop technologies Ltd,2 Hatamar st,Kenyon Drachim,20692 Yoqne’am Illit,Israel&nbsp;Tel: +972-4-9090800,e-mail: </FONT><A href="mailto:admin@sysmop.com"><FONT size=1>admin@sysmop.com</FONT></A>
+							<FONT size=1>Sysmop technologies Ltd,2 Hatamar st,Kenyon Drachim,20692 Yoqneג€™am Illit,Israel&nbsp;Tel: +972-4-9090800,e-mail: </FONT><A href="mailto:admin@sysmop.com"><FONT size=1>admin@sysmop.com</FONT></A>
 						</td>
 					</tr>
 				</table>
@@ -365,7 +365,7 @@ body,table,td,p,div,span,input,select,option,button {
 
 <DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;System, Hardware, Software and Mechanical Design </FONT></DIV>
 
-<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Implementation –&nbsp;</FONT></DIV>
+<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Implementation ג€“&nbsp;</FONT></DIV>
 
 <UL>
 
@@ -385,13 +385,6 @@ body,table,td,p,div,span,input,select,option,button {
 
 </UL>
 
-<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Verification tests</FONT></DIV>
-
-<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Validation and environmental tests</FONT></DIV>
-
-<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;EMC, CE, UL tests preparations and support.</FONT></DIV>
-
-<DIV align=left><FONT size=2><IMG src="http://www.sysmop.com/files/Buttons/12753953722727.jpg">&nbsp;Small factor and prototypes manufacturing.</FONT></DIV>
 
 </DIV>
 
@@ -453,7 +446,7 @@ body,table,td,p,div,span,input,select,option,button {
 
 						<div align="right" style="width:209px; height:29px; text-align:right;background: url('images/logoB.gif') right top no-repeat;">
 
-							<a href="http://www.simply-smart.com"> <img src="images/blanc.gif" width="209px" height="29px" alt="סימפלי סמארט - בניית וקידום אתרי אינטרנט" style="border:none;"/></a>
+							<a href="http://www.simply-smart.com"> <img src="images/blanc.gif" width="209px" height="29px" alt="׳¡׳™׳׳₪׳׳™ ׳¡׳׳׳¨׳˜ - ׳‘׳ ׳™׳™׳× ׳•׳§׳™׳“׳•׳ ׳׳×׳¨׳™ ׳׳™׳ ׳˜׳¨׳ ׳˜" style="border:none;"/></a>
 
 						</div>
 
@@ -461,7 +454,7 @@ body,table,td,p,div,span,input,select,option,button {
 
 					<td align='center'>
 
-						<FONT size=1>Sysmop technologies Ltd,2 Hatamar st,Kenyon Drachim,20692 Yoqne’am Illit,Israel&nbsp;Tel: +972-4-9090800,e-mail: </FONT><A href="mailto:admin@sysmop.com"><FONT size=1>admin@sysmop.com</FONT></A>
+						<FONT size=1>Sysmop technologies Ltd,2 Hatamar st,Kenyon Drachim,20692 Yoqneג€™am Illit,Israel&nbsp;Tel: +972-4-9090800,e-mail: </FONT><A href="mailto:admin@sysmop.com"><FONT size=1>admin@sysmop.com</FONT></A>
 
 					</td>
 
